Fix bug in content writing and update blog hero spacing

--- a/src/blog/blog-highlight.component.scss
+++ b/src/blog/blog-highlight.component.scss
@@ -29,12 +29,13 @@ $blog-higlight-size: 100%;
         display: block;
         bottom: 0;
         right: 0;
-        width: 50%;
+        width: 52%;
         height: 50%;
         background: color('primary');
         color: white;
-        padding: 1em;
-        font-size: 1.5rem;
+        padding: 1.4rem 1.9rem;
+        font-size: 1.7rem;
+        line-height: 1.6;
 
         strong {
             text-decoration: underline;
